SUBDIRS=seq mpi
EXTRA_DIST=   \
./mpi/htool.cpp  \
./mpi/mpi-cmaes.cpp \
./mpi/hypre_FreeFem.cpp \
./mpi/generaldefs.h \
./mpi/real_SuperLU_DIST_FreeFem.cpp \
./mpi/MPICG.cpp \
./mpi/Makefile.am \
./mpi/removeDOF.cpp \
./mpi/complex_SuperLU_DIST_FreeFem.cpp \
./mpi/ffsuperludistoption.hpp \
./mpi/parmetis.cpp \
./mpi/undef.awk \
./mpi/dSuperLU_DIST.cpp \
./mpi/MUMPS_FreeFem.cpp \
./mpi/MUMPS.cpp \
./seq \
./seq/marmousi.cpp \
./seq/overthrust.cpp \
./seq/marmousi2.cpp \
./seq/VTK_writer_3d.cpp \
./seq/FreeFemQA.cpp \
./seq/buildlayer.cpp \
./seq/Element_P4dc.cpp \
./seq/ff-get-dep.in \
./seq/SuperLu.cpp \
./seq/thresholdings.cpp \
./seq/newuoa.f \
./seq/funcTemplate.cpp \
./seq/DxWriter.cpp \
./seq/ff-get-dep.awk \
./seq/Morley.cpp \
./seq/mmg3d-v4.0.cpp \
./seq/splitmesh3.cpp \
./seq/Element_PkEdge.cpp \
./seq/freeyams.cpp \
./seq/pipe.cpp \
./seq/gsl.awk \
./seq/scotch.cpp \
./seq/ff_gsl_awk.hpp \
./seq/mat_psi.cpp \
./seq/medit.cpp \
./seq/splitmesh6.cpp \
./seq/UMFPACK64.cpp \
./seq/mmg3d.cpp \
./seq/netgen.cpp \
./seq/SortedList.h \
./seq/mmg3d_defines.h \
./seq/TransfoMesh_v2.hpp \
./seq/iohdf5.cpp \
./seq/ff-mmap-semaphore.cpp \
./seq/ffnewuoa.cpp \
./seq/NewSolver.cpp \
./seq/RZ.h \
./seq/CircumCenter.cpp \
./seq/GeometryQA.cpp \
./seq/splitedges.cpp \
./seq/Element_P1ncdc.cpp \
./seq/bmo.hpp \
./seq/ExampleMetrics.h \
./seq/splitmesh4.cpp \
./seq/MUMPS_seq.cpp \
./seq/pstream.h \
./seq/BinaryIO.cpp \
./seq/iovtk.cpp \
./seq/lgbmo.cpp \
./seq/Element_QF.cpp \
./seq/LayerMesh.cpp \
./seq/Element_P4.cpp \
./seq/msh3.hpp \
./seq/Element_Mixte3d.cpp \
./seq/Element_Mixte.cpp \
./seq/Curvature.cpp \
./seq/ff-pkg-download.in \
./seq/Element_P2bulle3.cpp \
./seq/pcm.hpp \
./seq/ClosePoints.cpp \
./seq/ilut.cpp \
./seq/ff-NLopt.cpp \
./seq/clapack.h \
./seq/Element_P3dc.cpp \
./seq/dfft.cpp \
./seq/Element_P3.cpp \
./seq/libff-mmap-semaphore.h \
./seq/BasicMath.h \
./seq/lapack.cpp \
./seq/isolineP1.cpp \
./seq/MetricKuate.cpp \
./seq/Makefile.am \
./seq/gmsh.cpp \
./seq/aniso.cpp \
./seq/BEC.cpp \
./seq/TensorK.hpp \
./seq/ff-Ipopt.cpp \
./seq/mshmet.cpp \
./seq/myfunction.cpp \
./seq/msh3.cpp \
./seq/LayerMesh.hpp \
./seq/Element_P4.hpp \
./seq/SaveHB.cpp \
./seq/Element_P2pnc.cpp \
./seq/isoline.cpp \
./seq/ffmaster.c \
./seq/splitmesh12.cpp \
./seq/addNewType.cpp \
./seq/Element_P1dc1.cpp \
./seq/PARDISO.cpp \
./seq/pcm.cpp \
./seq/cmaes.cpp \
./seq/Element_P3dc.hpp \
./seq/bfstream.cpp \
./seq/load.link.in \
./seq/Element_P3.hpp \
./seq/pcm2rnm.cpp \
./seq/VTK_writer.cpp \
./seq/BernardiRaugel.cpp \
./seq/renumb.hpp \
./seq/distance.cpp \
./seq/metis.cpp \
./seq/tetgen.cpp \
./seq/Element_P4dc.hpp \
./seq/symmetrizeCSR.cpp \
./seq/undef.awk \
./seq/cmaes_interface.h \
./seq/ppmimg.h \
./seq/ffrandom.cpp \
./seq/cmaes.h \
./seq/dfft.link \
./seq/qf11to25.cpp \
./seq/Geometry.hpp \
./seq/mat_dervieux.cpp \
./seq/MetricPk.cpp \
./seq/mkdll-ff.sh \
./seq/MUMPS.cpp \
./seq/Element_P1bl.cpp \
./seq/IncompleteCholesky.cpp \
./seq/shell.cpp \
./seq/Element_HCT.cpp \
./seq/TransfoMesh_v2.cpp \
./seq/libff-mmap-semaphore.c \
./seq/ff-cmaes.cpp \
./seq/gsl.cpp \
./seq/fortan_master.f90 \
./seq/bmo.cpp \
./seq/ppm2rnm.cpp \
./seq/ff-AiryBiry.cpp \
./seq/myfunction2.cpp \
./seq/exactpartition.cpp \
./seq/fflapack.cpp \
./Makefile.am \
./mpi/SLEPc-code.hpp \
./mpi/PETSc.cpp \
./mpi/PETSc-code.hpp \
./mpi/Makefile.am \
./mpi/PETSc-complex.cpp \
./mpi/PETSc.hpp \
./mpi/hpddm.cpp \
./mpi/hpddm_substructuring.cpp \
./mpi/SLEPc-complex.cpp \
./mpi/common.hpp \
./mpi/SLEPc.cpp
