SUBDIRS=seq mpi
EXTRA_DIST= \
mpi/MPICG.cpp \
mpi/MUMPS.cpp \
mpi/PETSc-code.hpp \
mpi/PETSc-complex.cpp \
mpi/PETSc.cpp \
mpi/PETSc.hpp \
mpi/SLEPc-code.hpp \
mpi/SLEPc-complex.cpp \
mpi/SLEPc.cpp \
mpi/common.hpp \
mpi/generaldefs.h \
mpi/hpddm.cpp \
mpi/hpddm_substructuring.cpp \
mpi/bem.cpp \
mpi/mpi-cmaes.cpp \
mpi/parmetis.cpp \
seq/BEC.cpp \
seq/BasicMath.h \
seq/BernardiRaugel.cpp \
seq/BinaryIO.cpp \
seq/CircumCenter.cpp \
seq/ClosePoints.cpp \
seq/Curvature.cpp \
seq/DxWriter.cpp \
seq/Element_HCT.cpp \
seq/Element_Mixte.cpp \
seq/Element_Mixte3d.cpp \
seq/Element_P1bl.cpp \
seq/Element_P1dc1.cpp \
seq/Element_P1ncdc.cpp \
seq/Element_P2bulle3.cpp \
seq/Element_P2pnc.cpp \
seq/Element_P3.cpp \
seq/Element_P3.hpp \
seq/Element_P3dc.cpp \
seq/Element_P3dc.hpp \
seq/Element_P4.cpp \
seq/Element_P4.hpp \
seq/Element_P4dc.cpp \
seq/Element_P4dc.hpp \
seq/Element_PkEdge.cpp \
seq/Element_QF.cpp \
seq/ExampleMetrics.h \
seq/FreeFemQA.cpp \
seq/Geometry.hpp \
seq/GeometryQA.cpp \
seq/IncompleteCholesky.cpp \
seq/LayerMesh.cpp \
seq/LayerMesh.hpp \
seq/MUMPS.cpp \
seq/MUMPS_seq.cpp \
seq/MetricKuate.cpp \
seq/MetricPk.cpp \
seq/Morley.cpp \
seq/NewSolver.cpp \
seq/PARDISO.cpp \
seq/RZ.h \
seq/SaveHB.cpp \
seq/Shur-Complement.cpp \
seq/SortedList.h \
seq/SuperLu.cpp \
seq/TensorK.hpp \
seq/TransfoMesh_v2.cpp \
seq/TransfoMesh_v2.hpp \
seq/UMFPACK64.cpp \
seq/VTK_writer.cpp \
seq/VTK_writer_3d.cpp \
seq/addNewType.cpp \
seq/aniso.cpp \
seq/bfstream.cpp \
seq/bmo.cpp \
seq/bmo.hpp \
seq/buildlayer.cpp \
seq/clapack.h \
seq/cmaes.cpp \
seq/cmaes.h \
seq/cmaes_interface.h \
seq/dfft.cpp \
seq/distance.cpp \
seq/exactpartition.cpp \
seq/ff-AiryBiry.cpp \
seq/ff-Ipopt.cpp \
seq/ff-NLopt.cpp \
seq/ff-cmaes.cpp \
seq/ff-mmap-semaphore.cpp \
seq/ff_gsl_awk.hpp \
seq/fflapack.cpp \
seq/ffnewuoa.cpp \
seq/ffrandom.cpp \
seq/fortan_master.f90 \
seq/freeyams.cpp \
seq/funcTemplate.cpp \
seq/gmsh.cpp \
seq/gsl.cpp \
seq/ilut.cpp \
seq/iohdf5.cpp \
seq/ioply.cpp \
seq/iovtk.cpp \
seq/isoline.cpp \
seq/lapack.cpp \
seq/lgbmo.cpp \
seq/libff-mmap-semaphore.h \
seq/geophysics.cpp \
seq/marmousi2.cpp \
seq/mat_dervieux.cpp \
seq/mat_psi.cpp \
seq/mat_edgeP1.cpp \
seq/medit.cpp \
seq/metis.cpp \
seq/mmg3d-v4.0.cpp \
seq/mmg3d_defines.h \
seq/msh3.cpp \
seq/msh3.hpp \
seq/mshmet.cpp \
seq/myfunction.cpp \
seq/myfunction2.cpp \
seq/netgen.cpp \
seq/pcm.cpp \
seq/pcm.hpp \
seq/pcm2rnm.cpp \
seq/pipe.cpp \
seq/ppm2rnm.cpp \
seq/ppmimg.h \
seq/pstream.h \
seq/qf11to25.cpp \
seq/renumb.hpp \
seq/scotch.cpp \
seq/shell.cpp \
seq/splitedges.cpp \
seq/splitmesh12.cpp \
seq/splitmesh3.cpp \
seq/splitmesh4.cpp \
seq/splitmesh6.cpp \
seq/symmetrizeCSR.cpp \
seq/tetgen.cpp \
seq/thresholdings.cpp \
seq/newuoa.f \
seq/ffmaster.c \
seq/libff-mmap-semaphore.c \
seq/ff-get-dep.in seq/ff-pkg-download.in seq/load.link.in \
seq/ff-get-dep.awk seq/gsl.awk
