# Makefile using Automake + Autoconf
# ----------------------------------
# $Id$

SUBDIRS=libMesh  bamglib femlib  Graphics Algo lglib fflib std x11	\
nw mpi agl glx ide bamg medit bin-win32 
EXTRA_DIST=FreeFem++-CoCoa Carbon.r  \
solver/MUMPS_FreeFem.cpp \
solver/README_COMPILE \
solver/complex_SuperLU_DIST_FreeFem.cpp \
solver/complex_pastix_FreeFem.cpp \
solver/ffsuperludistoption.hpp \
solver/hips_FreeFem.cpp \
solver/hypre_FreeFem.cpp \
solver/makefile \
solver/makefile-common.inc \
solver/makefile-sparsesolver.inc \
solver/parms_FreeFem.cpp \
solver/real_SuperLU_DIST_FreeFem.cpp \
solver/real_pastix_FreeFem.cpp \
solver/wrapper_dotblas.c \
solver/wrapper_dotblas.f \
solver/wrapper_dotblas1.c \
solver/wrapper_dotblas1.f 

