############################################################################
# This file is part of FreeFEM.                                            #
#                                                                          #
# FreeFEM is free software: you can redistribute it and/or modify          #
# it under the terms of the GNU Lesser General Public License as           #
# published by the Free Software Foundation, either version 3 of           #
# the License, or (at your option) any later version.                      #
#                                                                          #
# FreeFEM is distributed in the hope that it will be useful,               #
# but WITHOUT ANY WARRANTY; without even the implied warranty of           #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            #
# GNU Lesser General Public License for more details.                      #
#                                                                          #
# You should have received a copy of the GNU Lesser General Public License #
# along with FreeFEM. If not, see <http://www.gnu.org/licenses/>.          #
############################################################################
# SUMMARY : Makefile for FreeFem++
# LICENSE : LGPLv3
# ORG     : LJLL Universite Pierre et Marie Curie, Paris, FRANCE
# AUTHORS : ...
# E-MAIL  : ...

SUBDIRS=libMesh  bamglib femlib  Graphics Algo lglib fflib 	\
nw mpi  bamg medit bin-win32

EXTRA_DIST= Carbon.r  \
solver/MUMPS_FreeFem.cpp \
solver/README_COMPILE \
solver/complex_SuperLU_DIST_FreeFem.cpp \
solver/complex_pastix_FreeFem.cpp \
solver/ffsuperludistoption.hpp \
solver/hips_FreeFem.cpp \
solver/hypre_FreeFem.cpp \
solver/makefile \
solver/makefile-common.inc \
solver/makefile-sparsesolver.inc \
solver/parms_FreeFem.cpp \
solver/real_SuperLU_DIST_FreeFem.cpp \
solver/real_pastix_FreeFem.cpp \
solver/wrapper_dotblas.c \
solver/wrapper_dotblas.f \
solver/wrapper_dotblas1.c \
solver/wrapper_dotblas1.f
